--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-phantom": "^0.9.24",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/web3.js": "^1.95.4",
+    "axios": "^1.12.2",
+    "bs58": "^6.0.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
